--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -1,6 +1,9 @@
 body {
   font-family: 'Infini', sans-serif;
-  color: #F76D22;
+
+  a {
+    color: #F76D22;
+  }
 
   .jumbotron {
     background-color: #F76D22;
@@ -13,5 +16,9 @@ body {
   .footer {
     position: fixed;
     bottom: 0;
+  }
+
+  .table-bordered {
+    td,th { border: 2px black solid !important;}
   }
 }
