--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -1,4 +1,6 @@
 @import '../../bower_components/bootstrap/less/bootstrap.less';
+@import 'infini.less';
+
 
 body {
   font-family: 'Infini', sans-serif;
